# onda

./: "  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.amd  Dockerfile.next  Dockerfile.v2  Makefile  OPENCODE_21.md  OPENCODE_87.md  README.md  VERSION  deploy-test-common.sh  deploy-test-cuda.sh  deploy-test-rocm.sh  deploy-test.sh  deploy.sh  docker-compose.amd.yml  docker-compose.cuda.yml  docker-compose.next.yml  docker-compose.nvidia.yml  docker-compose.rocm.yml  docker-compose.yml  entrypoint.sh  go  hf_models.json  infer_model_arch.py  inference_roformer.py.orig  inference_universal.py  onda.sh  pipeline.sh  pyproject.toml  requirements-common.txt  requirements-docker-v2.txt  requirements-docker.txt  uvr_download_method.md  uvr_models.json
backend/: go.mod  go.sum  onda
docs/: demucs-onnx-setup.md
frontend/: index.html  package-lock.json  package.json
inference/: inference_demucs_onnx.py  inference_mdx.py  inference_universal.py
model_configs/: BS_Roformer_Viperx.json  Kim_Vocal_1.json  Kim_Vocal_2.json  MelBandRoformer.json  big_beta6x.json  htdemucs_ft.json  htdemucs_ft_bass.json  melband_roformer_big_beta1.json  melband_roformer_big_beta3.json  model_bs_polarformer_float16.json  model_bs_roformer_ep_317_sdr_12.9755.json  model_bs_roformer_ep_937_sdr_10.5309.json
onda/: cli.py  demucs.py  detect_gpu.sh  gui.py  onda_wrapper  pitch.py  player.py  viperx.py
onda-gui/: CHANGELOG.md  Dockerfile  Makefile  VERSION  entrypoint.sh  nginx.conf  onda-api.py
scripts/: deploy-test-all.sh  download-models.sh  (+3 more)
(+134 files in other folders)
